--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ bowen
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
