--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
