Auth0 Login Integration (#23)
* Hold...

* Auth0 Login is working

Footer needs to stay sticky to the bottom. Edit page is not so nice.

* Cleaning up some file organization and css

* NavMenu using Auth0 User Info

* removing commented code

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ bowen
 *.out
 
 # Dependency directories (remove the comment below to include it)
-# vendor/
+vendor/
 
 # Go workspace file
 go.work
@@ -26,6 +26,8 @@ go.work
 
 # Dev notes
 zz_notes.txt
+auth_config.json
+*.json.dev
 
 # vscodium files
 .vscode/
