--- a/web/package.json
+++ b/web/package.json
@@ -1,6 +1,7 @@
 {
   "name": "web",
   "private": true,
+  "proxy": "http://localhost:8080/",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
@@ -10,7 +11,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@auth0/auth0-react": "^2.3.0",
     "bootstrap": "^5.3.2",
+    "@fortawesome/fontawesome-svg-core": "^1.2",
+    "@fortawesome/free-solid-svg-icons": "^5.8",
+    "@fortawesome/react-fontawesome": "^0.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.2",
     "react-dom": "^18.2.0",
