--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@
 *.dll
 *.so
 *.dylib
-bowen
+thelocr
 
 # Test binary, built with `go test -c`
 *.test
@@ -27,7 +27,7 @@ go.work
 
 # Dev notes
 zz_notes.txt
-auth_config.json
+web/src/auth_config.json
 *.json.dev
 
 # vscodium files
