--- a/web/package.json
+++ b/web/package.json
@@ -2,6 +2,7 @@
   "name": "web",
   "private": true,
   "proxy": "http://localhost:8080/",
+  "homepage": ".",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
